--- a/Zuchniak/OBD2Bluetooth/app/build.gradle
+++ b/Zuchniak/OBD2Bluetooth/app/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.github.pires:obd-java-api:1.0-RC15'
+    compile 'com.github.pires:obd-java-api:1.0-RC16'
+    compile 'com.cardiomood.android:android-widgets:0.1.1'
     //compile 'com.jjoe64:graphview:4.0.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
